# practice-4-session-synergy

./: CMakeLists.txt  README.md
include/: data_structures.hpp
tests/: data_structures_test.cpp
web/: index.html  style.css
